--- a/Python_notebooks/neodass_ftp_access.ipynb
+++ b/Python_notebooks/neodass_ftp_access.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +116,19 @@
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-1d-20240523_20240523-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-7d-20240517_20240523-nrt.nc already exists. Skipping download.\n",
       "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240523_20240523-nrt.nc already exists. Skipping download.\n",
-      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-7d-20240517_20240523-nrt.nc already exists. Skipping download.\n"
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-7d-20240517_20240523-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\cmems_sea_level-sla-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
+      "Downloaded olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc to c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_a_1km-CHL_OC4ME-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\olci_b_1km-CHL_OC4ME-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_a-sea_surface_temperature-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\slstr_b-sea_surface_temperature-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_noaa20-chl_oc5ci-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-1d-20240524_20240524-nrt.nc already exists. Skipping download.\n",
+      "c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\NEODASS\\viirs_suomi-chl_oc5_pic-7d-20240518_20240524-nrt.nc already exists. Skipping download.\n"
      ]
     },
     {
@@ -125,7 +137,7 @@
        "'221 Goodbye.'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,14 +154,16 @@
     "username = \"neodaas17\"\n",
     "password = \"Aeghingiech7fahd2vee3\"\n",
     "\n",
+    "# Fixed start date (based on data availabiity) and end date set as current date, -1 day.\n",
     "start_date = '2024-05-20'  # Start date in YYYY-MM-DD format\n",
-    "end_date   = '2024-05-23'  # End date in YYYY-MM-DD format\n",
+    "now = datetime.now()\n",
+    "formatted_date = now - timedelta(days = 1) \n",
+    "end_date = formatted_date.strftime(\"%Y-%m-%d\") # End date in YYYY-MM-DD format\n",
     "\n",
     "start_date_loop = datetime.strptime(start_date, '%Y-%m-%d')\n",
     "end_date_loop   = datetime.strptime(end_date, '%Y-%m-%d')\n",
     "\n",
     "time_diff = end_date_loop - start_date_loop\n",
-    "\n",
     "\n",
     "##### Accessing files #####\n",
     "\n",
