--- a/Python_notebooks/satellite_data_download.ipynb
+++ b/Python_notebooks/satellite_data_download.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,9 +31,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'data' folder already exists in the parent directory.\n",
+      "'satellite' directory already exists inside 'data' folder.\n"
+     ]
+    }
+   ],
    "source": [
     "def create_missing_directories():\n",
     "    # Define the path to the parent directory\n",
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,16 +142,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CMEMS_Iceland_Basin_CHLA_April-May2024.nc does not exist. Proceeding to download.\n",
+      "INFO - 2024-05-25T09:51:08Z - Dataset version was not specified, the latest one was selected: \"202311\"\n",
+      "INFO - 2024-05-25T09:51:08Z - Dataset part was not specified, the first one was selected: \"default\"\n",
+      "INFO - 2024-05-25T09:51:15Z - Service was not specified, the default one was selected: \"arco-geo-series\"\n",
+      "WARNING - 2024-05-25T09:51:21Z - Some or all of your subset selection [55, 66] for the latitude dimension  exceed the dataset coordinates [20.005207061767578, 65.99478912353516]\n",
+      "WARNING - 2024-05-25T09:51:21Z - Some or all of your subset selection [2024-05-01 00:00:00, 2024-05-25 10:50:17] for the time dimension  exceed the dataset coordinates [2024-05-07 23:00:00, 2024-05-23 00:00:00]\n",
+      "INFO - 2024-05-25T09:51:21Z - Downloading using service arco-geo-series...\n",
+      "INFO - 2024-05-25T09:51:27Z - <xarray.Dataset> Size: 6GB\n",
+      "Dimensions:              (time: 16, latitude: 1056, longitude: 2880)\n",
+      "Coordinates:\n",
+      "  * latitude             (latitude) float32 4kB 55.01 55.02 ... 65.98 65.99\n",
+      "  * longitude            (longitude) float32 12kB -34.99 -34.98 ... -5.005\n",
+      "  * time                 (time) datetime64[ns] 128B 2024-05-08 ... 2024-05-23\n",
+      "Data variables: (12/21)\n",
+      "    CHL                  (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    CHL_uncertainty      (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DIATO                (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DIATO_uncertainty    (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DINO                 (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    DINO_uncertainty     (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    ...                   ...\n",
+      "    PICO_uncertainty     (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROCHLO              (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROCHLO_uncertainty  (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROKAR               (time, latitude, longitude) float32 195MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    PROKAR_uncertainty   (time, latitude, longitude) float64 389MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "    flags                (time, latitude, longitude) int8 49MB dask.array<chunksize=(1, 1024, 512), meta=np.ndarray>\n",
+      "Attributes: (12/92)\n",
+      "    Conventions:                     CF-1.8, ACDD-1.3\n",
+      "    DPM_reference:                   GC-UD-ACRI-PUG\n",
+      "    IODD_reference:                  GC-UD-ACRI-PUG\n",
+      "    acknowledgement:                 The Licensees will ensure that original ...\n",
+      "    citation:                        The Licensees will ensure that original ...\n",
+      "    cmems_product_id:                OCEANCOLOUR_ATL_BGC_L3_NRT_009_111\n",
+      "    ...                              ...\n",
+      "    time_coverage_resolution:        P1D\n",
+      "    time_coverage_start:             2023-10-15T06:57:27Z\n",
+      "    title:                           cmems_obs-oc_atl_bgc-plankton_nrt_l3-mul...\n",
+      "    westernmost_longitude:           -46.0\n",
+      "    westernmost_valid_longitude:     -46.0\n",
+      "    copernicusmarine_version:        1.2.2\n",
+      "INFO - 2024-05-25T09:51:27Z - Estimated size of the dataset file is 3900.267 MB.\n",
+      "Do you want to proceed with download? [Y/n]:INFO - 2024-05-25T09:51:35Z - Writing to local storage. Please wait...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 30402/30402 [01:26<00:00, 351.21it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO - 2024-05-25T09:53:05Z - Successfully downloaded to c:\\Users\\hanshil\\Documents\\GitHub\\biocarbon_nrt_data_viz\\data\\satellite\\CMEMS_Iceland_Basin_CHLA_April-May2024.nc\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "if os.path.exists(filepath):\n",
     "  response = input(\"Do you want to remove and overwrite the file \" + f\"\\\"{saved_netCDF_as}\\\"\" + \" (y/n): \").strip().lower()\n",
     "  if response == 'y':\n",
     "        os.remove(filepath)\n",
     "        print(f\"{filepath} has been removed.\")\n",
-    "        os.remove(filepath)  # Remove the existing file\n",
     "        print(f\"{saved_netCDF_as}. Proceeding to download.\")\n",
     "        cpm.subset(dataset_id=dataset_to_extract,\n",
     "        minimum_longitude= min_lon,\n",
@@ -155,6 +234,7 @@
     "        maximum_depth=max_depth,\n",
     "        output_filename = saved_netCDF_as,\n",
     "        output_directory = satellite_dir)\n",
+    "        \n",
     "  else:\n",
     "        print(\"Download cancelled.\")\n",
     "else:\n",
